# smtx_write_prefix_serial

./: .gitignore  README.md  main.py  pyproject.toml
.github/: bkp_arm-64.txt
.github/workflows/: test-build.yml
app/async_func/: __init__.py  rfid.py
app/core/: __init__.py  build_app.py  build_templates.py  config.py  indicator.py  middleware.py
app/db/: __init__.py
app/models/: __init__.py  rfid.py
app/routers/api/v1/: application.py  controller.py  devices.py  license.py  receive.py  rfid.py  simulator.py
app/routers/pages/: functions.py  index.py  settings.py
app/schemas/: __init__.py  application.py  events.py  examples.py  print.py  protected.py  simulator.py
app/services/: __init__.py
app/services/license/: __init__.py
app/services/rfid/: __init__.py  _main.py  controller.py  integration.py
app/services/settings_service/: __init__.py  _main.py
app/services/tray/: __init__.py  _main.py
app/templates/: base.html  start_error.html
app/templates/includes/: _devices.html  _events.html  _has_changes.html  _prefix.html  _serial.html  _tags.html  _tags_all.html  _tags_gtin.html  footer.html  header.html
app/templates/pages/application_settings/: _application_settings.html  _import_export.html  main.html
app/templates/pages/devices_settings/: _create_device.html  _device_modal.html  _device_row.html  _devices.html  main.html
app/templates/pages/gpo_page/: main.html
app/templates/pages/index/: main.html
app/templates/pages/license/: main.html
app/templates/pages/protected_page/: main.html
app/templates/pages/write_page/: main.html
config/: config.json
config/devices/: XPAD.json  cuba.json
docs/: SWAGGER.md
examples/: config.json
examples/devices/: ACUPAD.json  R700_IOT.json  R700_IOT_DICT.json  R700_IOT_GPI.json  R700_PROTECTED_INVENTORY.json  SATO.json  SERIAL.json  TCP.json  X714_ALL.json  X714_BLE.json  X714_SERIAL.json  X714_TCP.json  XPAD.json
scripts/: build_exe.py  commit.py  format.bat  format.sh  get_remote_repo.bat  get_remote_repo.sh  migrate.py  poetry_update.bat  poetry_update.sh  startup.bat  startup.sh
tests/: test_config_json.py  test_models_import.py  test_template_manager.py  test_version.py
